[package]
name = "freertos_rs"
version = "0.3.0"
authors = ["Rudi Benkovic <rudi.benkovic@gmail.com>"]
license = "BSD-2-Clause"
repository = "https://github.com/hashmismatch/freertos.rs"
description = """
Rust interface for the FreeRTOS embedded operating system.
"""

[lib]
name = "freertos_rs"

[dependencies]
